--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
 
 
-
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-
-<!--Favicons-->
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/favicons/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/favicons/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/favicons/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/favicons/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="/images/favicons/apple-touch-icon-60x60.png" />
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/images/favicons/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/images/favicons/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/images/favicons/apple-touch-icon-152x152.png" />
-<link rel="icon" type="image/png" href="/images/favicons/favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="/images/favicons/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="/images/favicons/favicon-128.png" sizes="128x128" />
-<link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon" />
-
 </head>
 <body onload="js:genwallet(null)">
   <div class="wallet">
@@ -37,7 +19,7 @@
           To deposit funds to this Turtle paper wallet: send TRTL to the <b>public</b> address
         </li>
         <li>
-          <b>DO NOT REVEAL THE PRIVATE KEY</b> until you are ready to import the balance of this wallet to a Turtle client 
+          <b>DO NOT REVEAL THE PRIVATE KEY</b> until you are ready to import the balance of this wallet to a Turtle client
         </li>
       </ul>
     </div>
@@ -61,53 +43,46 @@
   <div class="buttons">
     <button type="button" onclick="js:genwallet(null)">Generate new</button>
     <button type="button" onClick="window.print()">Print</button>
-  
+
   </div>
   <div class="instruction">
     <img src="instructions.png"/>
+    <div class="folding-logo-text">
+      <ul>
+        <div class="folding-logo">
+          <img class="folding-logo" src="logo.png"/>
+        </div>
+        <li>
+          <b>TURTLECOIN</b>
+        </li>
+      </ul>
+    </div>
+    <div class="folding2-logo-text">
+      <ul>
+        <div class="folding2-logo">
+          <img class="folding2-logo" src="logo.png"/>
+        </div>
+        <li>
+          <b>TURTLECOIN</b>
+        </li>
+      </ul>
+    </div>
+    <div class="folding3-logo-text">
+      <ul>
+        <div class="folding3-logo">
+          <img class="folding3-logo" src="logo.png"/>
+        </div>
+        <li>
+          <b>TURTLECOIN</b>
+        </li>
+      </ul>
+    </div>
   </div>
 
+  </div>
+  </div>
+    <script src="wallet.js"></script>
+      <script src="crypto_utils.js"></script>
   <script src="qrcode.js"></script>
-
-  <div class="col">
-     <!--p class="d-print-none">Print or write down these keys and keep them safe. Without them you cannot access your money. There are no second chances.</p-->
-    <div class="row border border-danger" style="padding:1em;">
-      <div class="col" style="overflow:visible">
-        <strong>Spend Key:</strong>
-        <span class="private">
-          <span style="font-family: monospace, monospace; word-wrap: break-word;" id="spend_key_widget">Generating...</span>
-        </span>
-      </div>
-      <div class="col" style="overflow:visible">
-        <strong>View Key:</strong>
-        <span class="private">
-          <span style="font-family: monospace, monospace; word-wrap: break-word;" id="view_key_widget">Generating...</span>
-        </span>
-      </div>
-      <!-- <div class="col-6">
-        <strong>GUI Wallet Key:</strong>
-        <span class="private-sm">
-          <small style="font-family: monospace, monospace; word-wrap: break-word;" id="wallet_keys_widget">Generating...</small>
-        </span>
-      </div> -->
-    </div>
-
-
-
-</div>
-<div class="row d-print-none">
-    <div class="col-12">
-      <center>
-      <input type="button" onClick="window.print()" class="btn btn-default" value="Print This Page"/>
-    </center>
-    </div>
-</div>
-
-</div>
-</div>
-	<script type="text/javascript" src="iframe-buster.js"></script>
-	<script type="text/javascript" src="crypto_utils.js"></script>
-	<script type="text/javascript" src="wallet.js"></script>
-
 </body>
 </html>
