--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="instruction-text">
       <ul>
         <li>
-          To deposit funds to this DeroGold paper wallet: send DEGO to the <b>public</b> address
+          To deposit funds to this Chimer paper wallet: send CMRA to the <b>public</b> address
         </li>
         <li>
-          <b>DO NOT REVEAL THE PRIVATE KEY</b> until you are ready to import the balance of this wallet to a DeroGold client
+          <b>DO NOT REVEAL THE PRIVATE KEY</b> until you are ready to import the balance of this wallet to a Chimera client
         </li>
       </ul>
     </div>
@@ -44,7 +44,7 @@
           <img class="logo" src="logo.png"/>
         </div>
         <li>
-          <b>DEROGOLD</b>
+          <b>CHIMERA</b>
         </li>
       </ul>
     </div>
@@ -70,7 +70,7 @@
           <img class="folding-logo" src="logo.png"/>
         </div>
         <li>
-          <b>DEROGOLD</b>
+          <b>CHIMERA</b>
         </li>
       </ul>
     </div>
@@ -80,7 +80,7 @@
           <img class="folding2-logo" src="logo.png"/>
         </div>
         <li>
-          <b>DEROGOLD</b>
+          <b>CHIMERA</b>
         </li>
       </ul>
     </div>
@@ -90,7 +90,7 @@
           <img class="folding3-logo" src="logo.png"/>
         </div>
         <li>
-          <b>DEROGOLD</b>
+          <b>CHIMERA</b>
         </li>
       </ul>
     </div>
